--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Prepare Files
       run: |
         mkdir BIR_Waste_Watch
-        cp -r src/* BIR_Waste_Watch/
+        cp -r custom_components/* BIR_Waste_Watch/
 
     - name: Zip Files
       run: zip -r BIR_Waste_Watch-${{ github.ref_name }}.zip BIR_Waste_Watch
