--- a/custom_components/bir/manifest.json
+++ b/custom_components/bir/manifest.json
@@ -1,12 +1,12 @@
 {
   "domain": "bir",
   "name": "BIR Waste Watch",
-  "config_flow": true,
-  "version": "1.1.0",
-  "documentation": "https://github.com/SanderBlom/BIR_Waste_Watch",
-  "dependencies": [],
-  "issue_tracker": "https://github.com/SanderBlom/BIR_Waste_Watch/issues",
   "codeowners": ["@sanderblom"],
+  "config_flow": true,
+  "dependencies": [],
+  "documentation": "https://github.com/SanderBlom/BIR_Waste_Watch",
+  "iot_class": "cloud_polling",
+  "issue_tracker": "https://github.com/SanderBlom/BIR_Waste_Watch/issues",
   "requirements": ["beautifulsoup4", "aiohttp"],
-  "iot_class": "cloud_polling"
+  "version": "1.1.0"
 }
