--- a/custom_components/bir/manifest.json
+++ b/custom_components/bir/manifest.json
@@ -7,6 +7,6 @@
   "documentation": "https://github.com/SanderBlom/BIR_Waste_Watch",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/SanderBlom/BIR_Waste_Watch/issues",
-  "requirements": ["beautifulsoup4", "aiohttp"],
+  "requirements": ["beautifulsoup4", "datetime"],
   "version": "1.1.0"
 }
